# stx-aiai18h

./: CLAUDE.md  Dockerfile  book.py  entrypoint.sh  nginx.conf  pyproject.toml  render.yaml
.github/workflows/: ci.yml
blocks/: bck_content_aiai_all.py  bck_domains_terms_aiai.py  bck_game_your_profile.py  bck_image_break_frog_orange.py  bck_image_dog_02_practice.py  bck_image_dog_sherlock.py  bck_image_go_practice.py  bck_image_two_racoons_01.py  bck_image_welcome_back_giraffe_01.py  bck_it_computers_ai_users.py  bck_participants_round_table_aiai.py  bck_practice_course_pack_access.py  bck_session_01_course_docs.py  bck_setting_up_notebooks_aiai.py  bck_showcase_aiai_content.py  bck_showcase_glimpse_aiai.py  bck_showcase_image_recognition_mnist_intro_aiai.py  bck_showcase_text_generation.py  bck_title_bravo.py  bck_title_break.py  bck_title_content.py  bck_trainer_ng.py  bck_training_title_aiai_dlh.py  bck_welcome_screen_aiai.py  trainer_ng_competencies_se_bck.py
custom/: styles.py
