[project]
name = "stx-aiai18h"
version = "1.0.0"
description = "AIAI 2024 course materials built with StreamTeX"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = ["streamtex>=0.3.0"]

[dependency-groups]
dev = ["pytest>=7.0", "ruff>=0.4.0"]

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
streamtex = { path = "../../streamtex", editable = true }

[tool.pyright]
extraPaths = ["../../streamtex"]
